--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -92,7 +92,7 @@ jobs:
       run: |
         if ${{ inputs.mod_description == '' }}
         then
-          desc="$(bannerlord_changelog_parser ${{ inputs.mod_description_full && 'fulldescription' || 'description }}' -f "$PWD/changelog.txt")"
+          desc="$(bannerlord_changelog_parser ${{ inputs.mod_description_full && 'fulldescription' || 'description' }} -f "$PWD/changelog.txt")"
           desc="${desc//'%'/'%25'}"
           desc="${desc//$'"'/'%22'}"
           desc="${desc//$'\n'/'%0A'}"
