--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -28,7 +28,7 @@ on:
         type: boolean
         default: true
       append_v_to_version:
-        required: true
+        required: false
         type: boolean
         default: true
     secrets:
