--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -119,7 +119,7 @@ jobs:
 
     - name: Run BUTR.NexusUploader
       run: |
-        unex upload ${{ inputs.nexusmods_mod_id }} "${{ inputs.mod_filename }}.7z" -v "${{ inputs.append_v_to_version && 'v' || '' }}${{ steps.set_version.outputs.mod_version }}" -f "${{ inputs.mod_filename }}";
+        unex upload ${{ inputs.nexusmods_mod_id }} "${{ inputs.mod_filename }}.zip" -v "${{ inputs.append_v_to_version && 'v' || '' }}${{ steps.set_version.outputs.mod_version }}" -f "${{ inputs.mod_filename }}";
         unex changelog "${{ inputs.append_v_to_version && 'v' || '' }}${{ steps.set_version.outputs.mod_version }}" -c "${{ steps.set_description.outputs.mod_changelog }}" -m "${{ inputs.nexusmods_mod_id }}";
       shell: pwsh
       env:
